--- a/MarginalEffects.html
+++ b/MarginalEffects.html
@@ -603,14 +603,12 @@ statistics from our simulated data.</p>
 effect size measures for a logistic regression:</p>
 <table>
 <colgroup>
-<col width="2%" />
-<col width="28%" />
-<col width="64%" />
+<col width="29%" />
+<col width="66%" />
 <col width="4%" />
 </colgroup>
 <thead>
 <tr class="header">
-<th align="left"></th>
 <th align="left">Name</th>
 <th align="left">Equation</th>
 <th align="left">Value</th>
@@ -618,7 +616,6 @@ effect size measures for a logistic regression:</p>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">OR</td>
 <td align="left">Odds Ratio</td>
 <td align="left"><span class="math display">\[\frac{p(ADHD \vert
 girl)/(1-p(ADHD \vert girl))}{p(ADHD \vert boy)/(1-p(ADHD \vert
@@ -626,17 +623,15 @@ boy))}\]</span></td>
 <td align="left">0.318</td>
 </tr>
 <tr class="even">
-<td align="left">RR</td>
 <td align="left">Risk Ratio</td>
 <td align="left"><span class="math display">\[\frac{p(ADHD \vert
 girl)}{p(ADHD \vert boy)}\]</span></td>
 <td align="left">0.575</td>
 </tr>
 <tr class="odd">
-<td align="left">AME</td>
-<td align="left">Average marginal effect (Risk difference)</td>
-<td align="left"><span class="math display">\[\large p(ADHD \vert
-girl)-p(ADHD \vert boy)\]</span></td>
+<td align="left">Average marginal effect (risk difference)</td>
+<td align="left"><span class="math display">\[p(ADHD \vert girl)-p(ADHD
+\vert boy)\]</span></td>
 <td align="left">-0.09</td>
 </tr>
 </tbody>
